<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLista">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/txtseguro"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/idade"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/percentual"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="194dp"
        android:background="@color/white">

        <ListView
            android:id="@+id/lvlista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/activity_lista" />
    </RelativeLayout>

</RelativeLayout>

